--- a/Age Calculator/popup.html
+++ b/Age Calculator/popup.html
@@ -6,7 +6,7 @@
         <script src="main.js"></script>
     </head>
     <body>
-        <h1>Birthday Manager</h1>
+        <h1>Age Calculator</h1>
         <h2>Your Age:<span id="calculated">0</span></h2>
         <h3>Enter a birth year</h3>
         <input type="text" id="year"/>
